aligned checkboxes and styles fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,4 +129,14 @@ label.checkbox-inline {
     font-size: .6rem;
 }
 
+.mr-sm-2 {
+    margin-right: 0.5rem!important;
+    font-size: .9rem;
+}
+
+.checkbox-grid li {
+    display: block;
+    float: left;
+    width: 20%;
+}
 
